--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server/app.js"
+    "dev": "nodemon server/app.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
+    "graphql-subscriptions": "^1.1.0",
     "mongoose": "^5.10.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "subscriptions-transport-ws": "^0.9.18"
   }
 }
