--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/MarselBurdo/express-graphql-subscribe#readme",
   "type": "module",
   "dependencies": {
+    "apollo-server": "^2.17.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
     "graphql-subscriptions": "^1.1.0",
+    "graphql-tag": "^2.11.0",
+    "graphql-tools": "^6.2.2",
     "mongoose": "^5.10.3",
     "nodemon": "^2.0.4",
     "subscriptions-transport-ws": "^0.9.18"
